Update the unsolicited structure.