@@ -1,63 +1,16 @@
 package com.github.pmoerenhout.atcommander.module._3gpp.commands;
 
 import static org.junit.Assert.assertEquals;
-
-import java.util.Collections;
+import static org.junit.Assert.assertNull;
 
 import org.junit.Test;
 
 import com.github.pmoerenhout.atcommander.AtResponse;
 import com.github.pmoerenhout.atcommander.basic.commands.BaseCommandTest;
-import com.github.pmoerenhout.atcommander.basic.exceptions.ParseException;
 import com.github.pmoerenhout.atcommander.module._3gpp.RegistrationState;
 import com.github.pmoerenhout.atcommander.module.v250.enums.AccessTechnology;
 
 public class NetworkRegistrationResponseTest extends BaseCommandTest {
-
-  @Test
-  public void test_creg_unsolicited_1() throws Exception {
-    final String line = "+CREG: 1";
-
-    final NetworkRegistrationResponse networkRegistrationResponse = new NetworkRegistrationResponse();
-    networkRegistrationResponse.parseUnsolicited(Collections.singletonList(line));
-
-    assertEquals(RegistrationState.REGISTERED_HOME_NETWORK, networkRegistrationResponse.getRegistrationState());
-  }
-
-  @Test
-  public void test_creg_unsolicited_2() throws Exception {
-    final String line = "+CREG: 2";
-    final NetworkRegistrationResponse networkRegistrationResponse = new NetworkRegistrationResponse();
-    networkRegistrationResponse.parseUnsolicited(Collections.singletonList(line));
-
-    assertEquals(RegistrationState.SEARCHING, networkRegistrationResponse.getRegistrationState());
-  }
-
-  @Test
-  public void test_creg_unsolicited_creg_1_with_lac_and_with_cellid() throws Exception {
-    final String line = "+CREG: 1,\"00DE\",\"2E2EE99\"";
-
-    final NetworkRegistrationResponse networkRegistrationResponse = new NetworkRegistrationResponse();
-    networkRegistrationResponse.parseUnsolicited(Collections.singletonList(line));
-
-    assertEquals(RegistrationState.REGISTERED_HOME_NETWORK, networkRegistrationResponse.getRegistrationState());
-    assertEquals(new Integer(0x00de), networkRegistrationResponse.getLac());
-    assertEquals(new Integer(0x2e2ee99), networkRegistrationResponse.getCellId());
-    //assertEquals(AccessTechnology.UTRAN, networkRegistrationResponse.getAccessTechnology());
-  }
-
-  @Test
-  public void test_unsolicited_creg_2_with_lac_and_with_cellid_and_with_act() throws Exception {
-    final String line = "+CREG: 2,\"00DE\",\"2D33F2C\",2";
-
-    final NetworkRegistrationResponse networkRegistrationResponse = new NetworkRegistrationResponse();
-    networkRegistrationResponse.parseUnsolicited(Collections.singletonList(line));
-
-    assertEquals(RegistrationState.SEARCHING, networkRegistrationResponse.getRegistrationState());
-    assertEquals(new Integer(0x00de), networkRegistrationResponse.getLac());
-    assertEquals(new Integer(0x2d33f2c), networkRegistrationResponse.getCellId());
-    assertEquals(AccessTechnology.UTRAN, networkRegistrationResponse.getAccessTechnology());
-  }
 
   @Test
   public void test_creg_solicited_2_3() throws Exception {
@@ -65,20 +18,11 @@ public class NetworkRegistrationResponseTest extends BaseCommandTest {
 
     final NetworkRegistrationResponse networkRegistrationResponse = new NetworkRegistrationResponse(response);
 
-    assertEquals(new Integer(2), networkRegistrationResponse.getMode());
+    assertEquals(2, networkRegistrationResponse.getMode());
     assertEquals(RegistrationState.DENIED, networkRegistrationResponse.getRegistrationState());
-  }
-
-  @Test
-  public void testCreg4WithLacAndCellId() throws Exception {
-    final String line = "+CREG: 5,\"9BCD\",\"09AB\"";
-
-    final NetworkRegistrationResponse networkRegistrationResponse = new NetworkRegistrationResponse();
-    networkRegistrationResponse.parseUnsolicited(Collections.singletonList(line));
-
-    assertEquals(RegistrationState.REGISTERED_ROAMING, networkRegistrationResponse.getRegistrationState());
-    assertEquals(new Integer(0x9bcd), networkRegistrationResponse.getLac());
-    assertEquals(new Integer(0x09ab), networkRegistrationResponse.getCellId());
+    assertNull(networkRegistrationResponse.getLac());
+    assertNull(networkRegistrationResponse.getCellId());
+    assertNull(networkRegistrationResponse.getAccessTechnology());
   }
 
   @Test
@@ -87,10 +31,11 @@ public class NetworkRegistrationResponseTest extends BaseCommandTest {
 
     final NetworkRegistrationResponse networkRegistrationResponse = new NetworkRegistrationResponse(response);
 
-    assertEquals(new Integer(2), networkRegistrationResponse.getMode());
+    assertEquals(2, networkRegistrationResponse.getMode());
     assertEquals(RegistrationState.REGISTERED_ROAMING, networkRegistrationResponse.getRegistrationState());
-    assertEquals(new Integer(0x9bcd), networkRegistrationResponse.getLac());
-    assertEquals(new Integer(0x09ab), networkRegistrationResponse.getCellId());
+    assertEquals(Integer.valueOf(0x9bcd), networkRegistrationResponse.getLac());
+    assertEquals(Integer.valueOf(0x09ab), networkRegistrationResponse.getCellId());
+    assertNull(networkRegistrationResponse.getAccessTechnology());
   }
 
   @Test
@@ -99,19 +44,11 @@ public class NetworkRegistrationResponseTest extends BaseCommandTest {
 
     final NetworkRegistrationResponse networkRegistrationResponse = new NetworkRegistrationResponse(response);
 
-    assertEquals(new Integer(2), networkRegistrationResponse.getMode());
+    assertEquals(2, networkRegistrationResponse.getMode());
     assertEquals(RegistrationState.REGISTERED_HOME_NETWORK, networkRegistrationResponse.getRegistrationState());
-    assertEquals(new Integer(0x9bcd), networkRegistrationResponse.getLac());
-    assertEquals(new Integer(0x09ab), networkRegistrationResponse.getCellId());
+    assertEquals(Integer.valueOf(0x9bcd), networkRegistrationResponse.getLac());
+    assertEquals(Integer.valueOf(0x09ab), networkRegistrationResponse.getCellId());
     assertEquals(AccessTechnology.UTRAN, networkRegistrationResponse.getAccessTechnology());
-  }
-
-  @Test(expected = ParseException.class)
-  public void test_creg_2_1_with_lac_and_with_cellid_and_act_not_parse_as_unsolicited() throws Exception {
-    final String line = "+CREG: 2,1,\"00DE\",\"2E2EE99\",2";
-
-    final NetworkRegistrationResponse networkRegistrationResponse = new NetworkRegistrationResponse();
-    networkRegistrationResponse.parseUnsolicited(Collections.singletonList(line));
   }
 
 }
