@@ -2,12 +2,14 @@ package com.github.pmoerenhout.atcommander.module.telit.commands;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+
+import org.junit.Test;
 
 import com.github.pmoerenhout.atcommander.AtResponse;
 import com.github.pmoerenhout.atcommander.basic.commands.BaseCommandTest;
 import com.github.pmoerenhout.atcommander.module.v250.enums.AccessTechnology;
-import org.junit.Before;
-import org.junit.Test;
 
 public class ServInfoResponseTest extends BaseCommandTest {
 
@@ -19,28 +21,20 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
 //  UMTS network   #SERVINFO: <UARFCN>, <dBM>, <NetNameAsc>,<NetCode>, <PSC>,<LAC>,<DRX>,<SD>,<RSCP>, <NOM>,<RAC>
 
-  @Before
-  public void setUp() throws Exception {
-    // BasicConfigurator.resetConfiguration();
-    // BasicConfigurator.configure();
-    // SimpleLogger logger = new SimpleLogger("","");
-  }
-
   @Test
   public void testServInfoResponseGSM() {
     final AtResponse response = createOkAtResponse("#SERVINFO: 1020,-55,\"Vodafone NL(\",\"20404\",61,00DE,00,0");
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.GSM);
 
-    assertEquals(new Integer(1020), servInfoResponse.getBcchArfcn());
-    assertEquals(new Integer(-55), servInfoResponse.getDbm());
+    assertEquals(Integer.valueOf(1020), servInfoResponse.getBcchArfcn());
+    assertEquals(Integer.valueOf(-55), servInfoResponse.getDbm());
     assertEquals("Vodafone NL(", servInfoResponse.getNetName());
     assertEquals("20404", servInfoResponse.getNetCode());
     assertEquals("61", servInfoResponse.getBaseStationIdentificationCode());
     assertEquals("00DE", servInfoResponse.getLocationAreaCode());
     assertEquals("00", servInfoResponse.getTimeAdvance());
-    assertEquals(false, servInfoResponse.isGprsSupported());
-
+    assertFalse(servInfoResponse.isGprsSupported());
 
     assertEquals(response.getInformationalText().get(0), servInfoResponse.toString());
   }
@@ -51,14 +45,14 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.GSM);
 
-    assertEquals(new Integer(841), servInfoResponse.getBcchArfcn());
-    assertEquals(new Integer(-95), servInfoResponse.getDbm());
+    assertEquals(Integer.valueOf(841), servInfoResponse.getBcchArfcn());
+    assertEquals(Integer.valueOf(-95), servInfoResponse.getDbm());
     assertEquals("T-Mobile NL", servInfoResponse.getNetName());
     assertEquals("20416", servInfoResponse.getNetCode());
     assertEquals("43", servInfoResponse.getBaseStationIdentificationCode());
     assertEquals("03F8", servInfoResponse.getLocationAreaCode());
     assertEquals("01", servInfoResponse.getTimeAdvance());
-    assertEquals(true, servInfoResponse.isGprsSupported());
+    assertTrue(servInfoResponse.isGprsSupported());
   }
 
   @Test
@@ -67,14 +61,14 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.GSM);
 
-    assertEquals(new Integer(1020), servInfoResponse.getBcchArfcn());
-    assertEquals(new Integer(-61), servInfoResponse.getDbm());
+    assertEquals(Integer.valueOf(1020), servInfoResponse.getBcchArfcn());
+    assertEquals(Integer.valueOf(-61), servInfoResponse.getDbm());
     assertEquals("vodafone NL(", servInfoResponse.getNetName());
     assertEquals("20404", servInfoResponse.getNetCode());
     assertEquals("61", servInfoResponse.getBaseStationIdentificationCode());
     assertEquals("00DE", servInfoResponse.getLocationAreaCode());
     assertEquals("00", servInfoResponse.getTimeAdvance());
-    assertEquals(true, servInfoResponse.isGprsSupported());
+    assertTrue(servInfoResponse.isGprsSupported());
   }
 
   @Test
@@ -83,14 +77,14 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.GSM);
 
-    assertEquals(null, servInfoResponse.getBcchArfcn());
-    assertEquals(null, servInfoResponse.getDbm());
+    assertNull(servInfoResponse.getBcchArfcn());
+    assertNull(servInfoResponse.getDbm());
     assertEquals("vodafone NL", servInfoResponse.getNetName());
     assertEquals("20404", servInfoResponse.getNetCode());
-    assertEquals(null, servInfoResponse.getBaseStationIdentificationCode());
+    assertNull(servInfoResponse.getBaseStationIdentificationCode());
     assertEquals("00DE", servInfoResponse.getLocationAreaCode());
     assertEquals("64", servInfoResponse.getTimeAdvance());
-    assertEquals(true, servInfoResponse.isGprsSupported());
+    assertTrue(servInfoResponse.isGprsSupported());
   }
 
   @Test
@@ -100,14 +94,14 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.GSM);
 
-    assertEquals(null, servInfoResponse.getBcchArfcn());
-    assertEquals(null, servInfoResponse.getDbm());
+    assertNull(servInfoResponse.getBcchArfcn());
+    assertNull(servInfoResponse.getDbm());
     assertEquals("vodafone NL", servInfoResponse.getNetName());
     assertEquals("20404", servInfoResponse.getNetCode());
-    assertEquals(null, servInfoResponse.getBaseStationIdentificationCode());
-    assertEquals(null, servInfoResponse.getLocationAreaCode());
+    assertNull(servInfoResponse.getBaseStationIdentificationCode());
+    assertNull(servInfoResponse.getLocationAreaCode());
     assertEquals("256", servInfoResponse.getTimeAdvance());
-    assertEquals(true, servInfoResponse.isGprsSupported());
+    assertTrue(servInfoResponse.isGprsSupported());
   }
 
   @Test
@@ -117,14 +111,14 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.GSM);
 
-    assertEquals(null, servInfoResponse.getBcchArfcn());
-    assertEquals(null, servInfoResponse.getDbm());
+    assertNull(servInfoResponse.getBcchArfcn());
+    assertNull(servInfoResponse.getDbm());
     assertEquals("vodafone NL", servInfoResponse.getNetName());
     assertEquals("20404", servInfoResponse.getNetCode());
-    assertEquals(null, servInfoResponse.getBaseStationIdentificationCode());
+    assertNull(servInfoResponse.getBaseStationIdentificationCode());
     assertEquals("03X02D3", servInfoResponse.getLocationAreaCode());
     assertEquals("64", servInfoResponse.getTimeAdvance());
-    assertEquals(true, servInfoResponse.isGprsSupported());
+    assertTrue(servInfoResponse.isGprsSupported());
   }
 
   @Test
@@ -135,18 +129,18 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.GSM);
 
-    assertEquals(new Integer(1001), servInfoResponse.getBcchArfcn());
-    assertEquals(new Integer(-91), servInfoResponse.getDbm());
+    assertEquals(Integer.valueOf(1001), servInfoResponse.getBcchArfcn());
+    assertEquals(Integer.valueOf(-91), servInfoResponse.getDbm());
     assertEquals("vodafone NL", servInfoResponse.getNetName());
     assertEquals("20404", servInfoResponse.getNetCode());
     assertEquals("FFFF7", servInfoResponse.getBaseStationIdentificationCode());
     assertEquals("00DE", servInfoResponse.getLocationAreaCode());
     assertEquals("00", servInfoResponse.getTimeAdvance());
-    assertEquals(Boolean.TRUE, servInfoResponse.isGprsSupported());
-    assertEquals(null, servInfoResponse.getPbArfcn());
+    assertTrue(servInfoResponse.isGprsSupported());
+    assertNull(servInfoResponse.getPbArfcn());
     assertEquals("II", servInfoResponse.getNetworkOperationMode());
     assertEquals("03", servInfoResponse.getRoutingAreaColourCode());
-    assertEquals(new Integer(6), servInfoResponse.getPriorityAccessThreshold());
+    assertEquals(Integer.valueOf(6), servInfoResponse.getPriorityAccessThreshold());
   }
 
   @Test
@@ -156,18 +150,18 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.GSM);
 
-    assertEquals(null, servInfoResponse.getBcchArfcn());
-    assertEquals(null, servInfoResponse.getDbm());
+    assertNull(servInfoResponse.getBcchArfcn());
+    assertNull(servInfoResponse.getDbm());
     assertEquals("vodafone NL", servInfoResponse.getNetName());
     assertEquals("20404", servInfoResponse.getNetCode());
-    assertEquals(null, servInfoResponse.getBaseStationIdentificationCode());
+    assertNull(servInfoResponse.getBaseStationIdentificationCode());
     assertEquals("00DE", servInfoResponse.getLocationAreaCode());
     assertEquals("64", servInfoResponse.getTimeAdvance());
-    assertEquals(true, servInfoResponse.isGprsSupported());  // 3
-    assertEquals(null, servInfoResponse.getPbArfcn());
+    assertTrue(servInfoResponse.isGprsSupported());  // 3
+    assertNull(servInfoResponse.getPbArfcn());
     assertEquals("II", servInfoResponse.getNetworkOperationMode());
-    assertEquals(null, servInfoResponse.getRoutingAreaColourCode());
-    assertEquals(null, servInfoResponse.getPriorityAccessThreshold());
+    assertNull(servInfoResponse.getRoutingAreaColourCode());
+    assertNull(servInfoResponse.getPriorityAccessThreshold());
   }
 
   @Test
@@ -177,18 +171,18 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.GSM);
 
-    assertEquals(new Integer(0), servInfoResponse.getBcchArfcn());
-    assertEquals(null, servInfoResponse.getDbm());
+    assertEquals(Integer.valueOf(0), servInfoResponse.getBcchArfcn());
+    assertNull(servInfoResponse.getDbm());
     assertEquals("NL KPN", servInfoResponse.getNetName());
     assertEquals("20408", servInfoResponse.getNetCode());
     assertEquals("0", servInfoResponse.getBaseStationIdentificationCode());
     assertEquals("0000", servInfoResponse.getLocationAreaCode());
     assertEquals("0", servInfoResponse.getTimeAdvance());
-    assertEquals(true, servInfoResponse.isGprsSupported());  // 3
+    assertTrue(servInfoResponse.isGprsSupported());  // 3
     assertEquals("-0", servInfoResponse.getPbArfcn());
-    assertEquals(null, servInfoResponse.getNetworkOperationMode());
+    assertNull(servInfoResponse.getNetworkOperationMode());
     assertEquals("00", servInfoResponse.getRoutingAreaColourCode());
-    assertEquals(null, servInfoResponse.getPriorityAccessThreshold());
+    assertNull(servInfoResponse.getPriorityAccessThreshold());
   }
 
   @Test
@@ -198,18 +192,18 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.GSM);
 
-    assertEquals(null, servInfoResponse.getBcchArfcn());
-    assertEquals(null, servInfoResponse.getDbm());
+    assertNull(servInfoResponse.getBcchArfcn());
+    assertNull(servInfoResponse.getDbm());
     assertEquals("NL KPN", servInfoResponse.getNetName());
     assertEquals("20408", servInfoResponse.getNetCode());
-    assertEquals(null, servInfoResponse.getBaseStationIdentificationCode());
+    assertNull(servInfoResponse.getBaseStationIdentificationCode());
     assertEquals("00DE", servInfoResponse.getLocationAreaCode());
     assertEquals("64", servInfoResponse.getTimeAdvance());
-    assertEquals(true, servInfoResponse.isGprsSupported());  // 3
-    assertEquals(null, servInfoResponse.getPbArfcn());
+    assertTrue(servInfoResponse.isGprsSupported());  // 3
+    assertNull(servInfoResponse.getPbArfcn());
     assertEquals("II", servInfoResponse.getNetworkOperationMode());
     assertEquals("01", servInfoResponse.getRoutingAreaColourCode());
-    assertEquals(null, servInfoResponse.getPriorityAccessThreshold());
+    assertNull(servInfoResponse.getPriorityAccessThreshold());
   }
 
   @Test
@@ -219,18 +213,18 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.UTRAN);
 
-    assertEquals(new Integer(3011), servInfoResponse.getUmtsArfcn());
-    assertEquals(new Integer(-79), servInfoResponse.getDbm());
+    assertEquals(Integer.valueOf(3011), servInfoResponse.getUmtsArfcn());
+    assertEquals(Integer.valueOf(-79), servInfoResponse.getDbm());
     assertEquals("NL KPN", servInfoResponse.getNetName());
     assertEquals("20408", servInfoResponse.getNetCode());
     assertEquals("90", servInfoResponse.getPrimarySynchronisationCode());
     assertEquals("00DE", servInfoResponse.getLocationAreaCode());
     assertEquals("64", servInfoResponse.getDiscontinuousReceptionCycleLength());
     assertEquals("1", servInfoResponse.getServiceDomain());
-    assertEquals(new Integer(-87), servInfoResponse.getReceivedSignalCodePower());
-    assertEquals(null, servInfoResponse.getNetworkOperationMode());
-    assertEquals(null, servInfoResponse.getRoutingAreaColourCode());
-    assertEquals(null, servInfoResponse.getPriorityAccessThreshold());
+    assertEquals(Integer.valueOf(-87), servInfoResponse.getReceivedSignalCodePower());
+    assertNull(servInfoResponse.getNetworkOperationMode());
+    assertNull(servInfoResponse.getRoutingAreaColourCode());
+    assertNull(servInfoResponse.getPriorityAccessThreshold());
   }
 
   @Test
@@ -240,19 +234,19 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.GSM);
 
-    assertEquals(new Integer(1001), servInfoResponse.getBcchArfcn());
-    assertEquals(new Integer(-82), servInfoResponse.getDbm());
+    assertEquals(Integer.valueOf(1001), servInfoResponse.getBcchArfcn());
+    assertEquals(Integer.valueOf(-82), servInfoResponse.getDbm());
     assertEquals("vodafone NL", servInfoResponse.getNetName());
     assertEquals("20404", servInfoResponse.getNetCode());
 
     assertEquals("FFFF7", servInfoResponse.getBaseStationIdentificationCode());
     assertEquals("18EC", servInfoResponse.getLocationAreaCode());
     assertEquals("00", servInfoResponse.getTimeAdvance());
-    assertEquals(false, servInfoResponse.isGprsSupported());
-    assertEquals(null, servInfoResponse.getPbArfcn());
-    assertEquals(null, servInfoResponse.getNetworkOperationMode());
-    assertEquals(null, servInfoResponse.getRoutingAreaColourCode());
-    assertEquals(null, servInfoResponse.getPriorityAccessThreshold());
+    assertFalse(servInfoResponse.isGprsSupported());
+    assertNull(servInfoResponse.getPbArfcn());
+    assertNull(servInfoResponse.getNetworkOperationMode());
+    assertNull(servInfoResponse.getRoutingAreaColourCode());
+    assertNull(servInfoResponse.getPriorityAccessThreshold());
   }
 
   @Test
@@ -262,17 +256,17 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.UTRAN);
 
-    assertEquals(new Integer(1012), servInfoResponse.getUmtsArfcn());
-    assertEquals(new Integer(-83), servInfoResponse.getDbm());
+    assertEquals(Integer.valueOf(1012), servInfoResponse.getUmtsArfcn());
+    assertEquals(Integer.valueOf(-83), servInfoResponse.getDbm());
     assertEquals("vodafone NL", servInfoResponse.getNetName());
     assertEquals("20404", servInfoResponse.getNetCode());
     assertEquals("00", servInfoResponse.getPrimarySynchronisationCode());
     assertEquals("00DE", servInfoResponse.getLocationAreaCode());
     assertEquals("00", servInfoResponse.getDiscontinuousReceptionCycleLength());
     assertEquals("0", servInfoResponse.getServiceDomain());
-    assertEquals(null, servInfoResponse.getReceivedSignalCodePower());
-    assertEquals(null, servInfoResponse.getNetworkOperationMode());
-    assertEquals(null, servInfoResponse.getRoutingAreaColourCode());
+    assertNull(servInfoResponse.getReceivedSignalCodePower());
+    assertNull(servInfoResponse.getNetworkOperationMode());
+    assertNull(servInfoResponse.getRoutingAreaColourCode());
   }
 
   @Test
@@ -282,15 +276,15 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.UTRAN);
 
-    assertEquals(new Integer(10612), servInfoResponse.getUmtsArfcn());
-    assertEquals(new Integer(-84), servInfoResponse.getDbm());
+    assertEquals(Integer.valueOf(10612), servInfoResponse.getUmtsArfcn());
+    assertEquals(Integer.valueOf(-84), servInfoResponse.getDbm());
     assertEquals("vodafone NL", servInfoResponse.getNetName());
     assertEquals("20404", servInfoResponse.getNetCode());
     assertEquals("176", servInfoResponse.getPrimarySynchronisationCode());
     assertEquals("00DE", servInfoResponse.getLocationAreaCode());
     assertEquals("64", servInfoResponse.getDiscontinuousReceptionCycleLength());
     assertEquals("1", servInfoResponse.getServiceDomain());
-    assertEquals(new Integer(-88), servInfoResponse.getReceivedSignalCodePower());
+    assertEquals(Integer.valueOf(-88), servInfoResponse.getReceivedSignalCodePower());
     assertEquals("II", servInfoResponse.getNetworkOperationMode());
     assertEquals("00", servInfoResponse.getRoutingAreaColourCode());
   }
@@ -302,8 +296,8 @@ public class ServInfoResponseTest extends BaseCommandTest {
 
     final ServInfoResponse servInfoResponse = new ServInfoResponse(response, AccessTechnology.GSM);
 
-    assertEquals(new Integer(1020), servInfoResponse.getBcchArfcn());
-    assertEquals(new Integer(-63), servInfoResponse.getDbm());
+    assertEquals(Integer.valueOf(1020), servInfoResponse.getBcchArfcn());
+    assertEquals(Integer.valueOf(-63), servInfoResponse.getDbm());
     assertEquals("vodafone NL", servInfoResponse.getNetName());
     assertEquals("20404", servInfoResponse.getNetCode());
     assertEquals("61", servInfoResponse.getBaseStationIdentificationCode());
